# router

./: .env.example  .env.prod.example  .env.telemetry  .gitignore  Cargo.toml  Makefile  README.md  SUPERGRAPH_COMPOSITION.md  TASK1-SUMMARY.md  TELEMETRY_IMPLEMENTATION.md  docker-compose.dev.yml  docker-compose.logging.yml  docker-compose.prod.yml  docker-compose.telemetry.yml  docker-compose.yml  otel-collector-config.yml  prometheus-alerts.yml  prometheus.yml  router.yaml  supergraph-validation-report.txt  supergraph.graphql  supergraph.yaml
catalog-subgraph/: Cargo.toml  Dockerfile
catalog-subgraph/src/: main.rs
docs/: API.md  API_RU.md  ARCHITECTURE.md  ARCHITECTURE_PLANTUML.md  DEPLOYMENT.md  DEVELOPMENT.md  DEVELOPMENT_RU.md  IMPROVEMENT_RECOMMENDATIONS.md  LOAD_TESTING.md  LOAD_TESTING_RU.md  SECURITY.md  SECURITY_RU.md  _Analys_Code.md  _Volume_Code.md
docs/Task1/: C4_ARCHITECTURE_CODE.puml  C4_ARCHITECTURE_COMPONENT.puml  C4_ARCHITECTURE_CONTAINER.puml  C4_ARCHITECTURE_CONTEXT.puml  C4_ARCHITECTURE_DEPLOYMENT.puml  C4_ARCHITECTURE_OVERVIEW.md  C4_CODE_EXPLANATION.md  C4_COMPONENT_DETAILED_EXPLANATION.md  C4_COMPONENT_EXPLANATION.md  C4_CONTAINER_DETAILED_EXPLANATION.md  C4_CONTAINER_EXPLANATION.md  C4_CONTEXT_EXPLANATION.md  C4_DEPLOYMENT_EXPLANATION.md  INFRASTRUCTURE_ANALYSIS.md  PERFORMANCE_ANALYSIS.md  TASK1_COMMANDS_ANALYSIS.md  TECHNICAL_DECISIONS.md
docs/Task10/: 01_CONTEXT_EXPLANATION.md  02_CONTAINER_EXPLANATION.md  03_COMPONENT_EXPLANATION.md  04_DEPLOYMENT_EXPLANATION.md  05_CODE_EXPLANATION.md  C4_ARCHITECTURE_CODE.puml  C4_ARCHITECTURE_COMPONENT.puml  C4_ARCHITECTURE_CONTAINER.puml  C4_ARCHITECTURE_CONTEXT.puml  C4_ARCHITECTURE_DEPLOYMENT.puml  COMPREHENSIVE_ARCHITECTURE_GUIDE.md  README.md  TASK10_AI_COMMANDS_COLLECTION.md
docs/Task11/: 01_CONTEXT_EXPLANATION.md  02_CONTAINER_EXPLANATION.md  03_COMPONENT_EXPLANATION.md  04_DEPLOYMENT_EXPLANATION.md  05_CODE_EXPLANATION.md  C4_ARCHITECTURE_CODE.puml  C4_ARCHITECTURE_COMPONENT.puml  C4_ARCHITECTURE_CONTAINER.puml  C4_ARCHITECTURE_CONTEXT.puml  C4_ARCHITECTURE_DEPLOYMENT.puml  COMPREHENSIVE_ARCHITECTURE_GUIDE.md  README.md  TASK11_AI_COMMANDS_COLLECTION.md
docs/Task12/: 01_CONTEXT_EXPLANATION.md  02_CONTAINER_EXPLANATION.md  03_COMPONENT_EXPLANATION.md  04_DEPLOYMENT_EXPLANATION.md  05_CODE_EXPLANATION.md  C4_ARCHITECTURE_CODE.puml  C4_ARCHITECTURE_COMPONENT.puml  C4_ARCHITECTURE_CONTAINER.puml  C4_ARCHITECTURE_CONTEXT.puml  C4_ARCHITECTURE_DEPLOYMENT.puml  COMPREHENSIVE_ARCHITECTURE_GUIDE.md  PLANTUML_CODE_BRIDGE.md  PLANTUML_COMPONENT_BRIDGE.md  PLANTUML_CONTAINER_BRIDGE.md  PLANTUML_CONTEXT_BRIDGE.md  PLANTUML_DEPLOYMENT_BRIDGE.md  TASK12_AI_COMMANDS_COLLECTION.md
docs/Task13/: 01_CONTEXT_EXPLANATION.md  02_CONTAINER_EXPLANATION.md  C4_ARCHITECTURE_CODE.puml  C4_ARCHITECTURE_COMPONENT.puml  C4_ARCHITECTURE_CONTAINER.puml  C4_ARCHITECTURE_CONTEXT.puml  C4_ARCHITECTURE_DEPLOYMENT.puml  COMPREHENSIVE_ARCHITECTURE_GUIDE.md  PLANTUML_COMPONENT_BRIDGE.md  PLANTUML_CONTAINER_BRIDGE.md  PLANTUML_CONTEXT_BRIDGE.md  PLANTUML_DEPLOYMENT_BRIDGE.md  TASK13_AI_COMMANDS_COLLECTION.md
docs/Task14/: AI_COMMANDS_COLLECTION.md  Apollo_Router_Updates_Integration.md  C4_Code_Diagram.puml  README.md  (+13 more)
filebeat/: filebeat.yml
offers-subgraph/: Cargo.toml  Dockerfile
schemas/: catalog.graphql  offers.graphql  search.graphql  ugc.graphql  users.graphql
scripts/: compose-supergraph.sh  docker-ops.sh  health-check.sh  router-entrypoint.sh  setup-dev.sh  setup-logging.sh  setup-telemetry.sh  simple-compose.sh  startup-validation.sh  task1-commands-log.sh  validate-supergraph.sh
search-subgraph/: Cargo.toml  Dockerfile
search-subgraph/src/: main.rs
ugc-subgraph/: .env.performance  Cargo.toml  Dockerfile  FEDERATION.md  MIGRATION.md  PERFORMANCE.md  feature-flags.yaml  schema.federation.graphql
ugc-subgraph/benches/: review_benchmarks.rs
ugc-subgraph/migrations/: 001_create_reviews_table.sql  002_create_offer_ratings_table.sql  003_add_performance_indexes.sql
ugc-subgraph/scripts/: run_tests.sh
ugc-subgraph/src/: config.rs  database.rs  error.rs  health.rs  main.rs
ugc-subgraph/src/auth/: context.rs  error.rs  middleware.rs  mod.rs  service.rs
ugc-subgraph/src/error/: tests.rs
ugc-subgraph/src/graphql/: federation_test.rs  guards.rs  mod.rs  mutation.rs  query.rs  tests.rs  types.rs
ugc-subgraph/src/migration/: config_loader.rs  feature_flags.rs  management_api.rs  mod.rs  monitoring.rs  rest_adapter.rs  traffic_router.rs
ugc-subgraph/src/models/: mod.rs  offer_rating.rs  review.rs
ugc-subgraph/src/repository/: mod.rs
ugc-subgraph/src/service/: cache.rs  circuit_breaker.rs  dataloader.rs  external.rs  mod.rs  query_limits.rs  redis_cache.rs  tests.rs
ugc-subgraph/src/telemetry/: logging.rs  metrics.rs  mod.rs  tracing.rs
ugc-subgraph/tests/: auth_integration_tests.rs  contract_tests.rs  e2e_tests.rs  federation_tests.rs  integration_tests.rs  performance_tests.rs  schema_compatibility_tests.rs  test_config.rs
users-subgraph/: Cargo.toml  Dockerfile
users-subgraph/src/: lib.rs  main.rs
users-subgraph/tests/: integration_test.rs
(+136 files in other folders)
