[package]
name = "users-subgraph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# GraphQL
async-graphql.workspace = true
async-graphql-axum.workspace = true

# Web framework
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# UUID and time
uuid.workspace = true
chrono.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true

# Metrics
prometheus.workspace = true

# Authentication
jsonwebtoken.workspace = true

# Configuration
config.workspace = true

[dev-dependencies]
testcontainers.workspace = true